# noc-koika

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  dune-project  flake.nix  koika.mk  noc.ml  noc.mli
Deprecated/: Interface.v  NOC_impl.v  NOC_impl_koika.v  Pipeline_NOC.v  Pipeline_NOC2.v  Pipeline_NOC3.v  Pipeline_NOC4.v  Pipeline_NOCtyped.v  Pipeline_static.v  Router.v  advanced_noc.v  simple_noc.v
NOC_Implementations/: NoC100.v  NoC128.v  NoC15.v  NoC16.v  NoC160.v  NoC192.v  NoC24.v  NoC3.v  NoC31.v  NoC32.v  NoC4.v  NoC48.v  NoC63.v  NoC64.v  NoC75.v  NoC95.v  NoC96.v  noc.kpkg
NoC10/: NoC.dot  NoC.hpp  NoC.v  noc.kpkg
NoC7/: NoC.dot  NoC.hpp  NoC.v  noc.kpkg
_build/: .db  .digest-db  log
_build/default/: noc.ml  noc.mli
documentation/: Basics.md  FV_NOC.md  HW_Implementation.md  M3.md  NOC_Security.md  Routing_Algos.md  koika.md  metacoq.md  paper_summaries.md
documentation/Markdown Notes/: FV_HW.md  FV_NOC.md  koika.md
noc/: Dynamic_NOC.v  EqnVect.v  Interface.v  Koika_tests.v  NOC.v  NOCSyntax.v  NOC_impl.v  NOC_impl_koika.v  NOC_setup.v  NoC4.v  Pipeline_NOC2.v  Pipeline_NOC3.v  Pipeline_NOC_parametric.v  Router.v  Router_4_NESW.v  Router_typed.v  Show_fns.v  Types.v  actions.v  again.v  dune  helpers.v  setup.v  zulip_equations.v
noc/Routers/: Router_2_NE.v  (+8 more)
noc_compiled/: Makefile  NoC.cpp  NoC.dot  NoC.hpp  NoC.v  NoC.verilator.cpp  my_NoC.v  noc.kpkg
practice/: Koika_tests.v  List_of_lists.v  NOC_setup.v  NOC_setup2.v  Vector.v  meta_zulip.v  metacoqdemo.v  metacoqtour.v  metaprac.v  metaprac2.v  rough.v  strings.v
(+8 files in other folders)
