(lang dune 3.8)

;; enable coq support for dune project
(using coq 0.8)

;; project name
(name noc-koika)
(version 0.0.1)
(license MIT)
(source
 (github Barkhausen-Institut/noc-koika))
(authors
 "Garvit Chhabra  <garvit.chhabra@barkhauseninstitut.org>"
 "Sebastian Ertel <sebastian.ertel@barkhauseninstitut.org>")
(maintainers
 "Garvit Chhabra  <garvit.chhabra@barkhauseninstitut.org>"
 "Sebastian Ertel <sebastian.ertel@barkhauseninstitut.org>")
(documentation "https://github.com/Barkhausen-Institut/noc-koika")

